@@ -228,7 +228,7 @@ ABOUT
 	the people who have helped to make bitchx what it is.
 
 ADDFORWARD [nick|#channel]
-	Forwards all msgs recieved to another nick or channel.
+	Forwards all msgs received to another nick or channel.
 
 ADDIDLE         
 
