@@ -971,7 +971,7 @@ see strftime(3) for more options</code>
 <code>to start a dcc chat with someone type <br />
 /dcc chat nick<br />
 <br />
-if you recieve a dcc chat request you have two options<br />
+if you receive a dcc chat request you have two options<br />
 you can type:<br />
 /chat or /nochat<br />
 -OR-<br />
@@ -1163,8 +1163,8 @@ YANK_FROM_CUTBUFFER	insert the last text you deleted<br />
 /RELCR	Usage: /relcr- Displays the last CTCP reply message received															<br />
 /RELCRT	Usage: /relcrt- Changes the topic to the last CTCP reply message															<br />
 /RELCT	Usage: /relct- Changes the topic to the last CTCP command issued															<br />
-/RELD	Usage: /reld- Displays the last DCC msg recieved.															<br />
-/RELDT	Usage: /reldt- Sets the topic to the last DCC message recieved.															<br />
+/RELD	Usage: /reld- Displays the last DCC msg received.															<br />
+/RELDT	Usage: /reldt- Sets the topic to the last DCC message received.															<br />
 /RELI	Usage: /reli- Shows the last invite message received															<br />
 /RELIT	Usage: /relit- Changes the topic to the last invite message received															<br />
 /RELM	Usage: /relm <nick|channel>- Redirects last received message to <nick|channel>If invoked with -l, the last 10 messages received are listed-l # will display message number #															<br />
